# AltairChessEngine

./: CMakeLists.txt  makefile
src/: bench.cpp  bench.h  bitboard.cpp  constants.h  evaluation.cpp  main.cpp  move.cpp  move.h  move_ordering.cpp  move_ordering.h  perft.cpp  perft.h  position.cpp  position.h  search.cpp  search.h  see.cpp  see.h  tables.h  uci.cpp  uci.h  useful.cpp  useful.h  zobrist.h
